--- a/frontend/src/style/_main.scss
+++ b/frontend/src/style/_main.scss
@@ -55,6 +55,7 @@ main {
   background-color: var(--color-btn-bg);
   font-size: 1rem;
   padding: 0.5rem 1rem;
+  margin: 0;
   cursor: pointer;
 
   &:hover {
