feat: drop arrow buttons

--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -31,6 +31,7 @@
   --color-btn-bg: var(--color-blueGrey-700);
   --color-btn-border: var(--color-blueGrey-800);
   --color-btn-bg-hover: var(--color-blueGrey-600);
+  --color-btn-bg-active: var(--color-blueGrey-600);
 
   --color-btn2-bg: var(--color-blueGrey-800);
   --color-btn2-border: var(--color-blueGrey-900);
