--- a/frontend/src/style/_main.scss
+++ b/frontend/src/style/_main.scss
@@ -9,23 +9,20 @@ html {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-  font-size: 15px;
+  font-size: 13px;
 }
 
 body {
   margin: 0;
-  color: var(--color-text);
-  font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
 }
 
-@font-face {
-  font-family: "Nunito";
-  font-style: normal;
+body, button, input, textarea {
+  font-size: 1rem;
+  color: var(--color-text);
+  font-family: -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
   font-weight: 400;
-  src: local(""),
-    url("../assets/fonts/nunito-v16-latin-regular.woff2") format("woff2");
+  text-rendering: optimizeLegibility;
+  font-variant: common-ligatures slashed-zero tabular-nums;
 }
 
 #app {
