--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -1,239 +1,130 @@
 :root {
-  --color-bluegrey-50: #eceff1;
-  --color-bluegrey-100: #cfd8dc;
-  --color-bluegrey-200: #b0bec5;
-  --color-bluegrey-300: #90a4ae;
-  --color-bluegrey-400: #78909c;
-  --color-bluegrey-500: #607d8b;
-  --color-bluegrey-600: #546e7a;
-  --color-bluegrey-700: #455a64;
-  --color-bluegrey-800: #37474f;
-  --color-bluegrey-900: #263238;
+  --color-scale-blue-0: #cae8ff;
+  --color-scale-blue-1: #a5d6ff;
+  --color-scale-blue-2: #79c0ff;
+  --color-scale-blue-3: #58a6ff;
+  --color-scale-blue-4: #388bfd;
+  --color-scale-blue-5: #1f6feb;
+  --color-scale-blue-6: #1158c7;
+  --color-scale-blue-7: #0d419d;
+  --color-scale-blue-8: #0c2d6b;
+  --color-scale-blue-9: #051d4d;
 
-  --color-red-50: #ffebee;
-  --color-red-100: #ffcdd2;
-  --color-red-200: #ef9a9a;
-  --color-red-300: #e57373;
-  --color-red-400: #ef5350;
-  --color-red-500: #f44336;
-  --color-red-600: #e53935;
-  --color-red-700: #d32f2f;
-  --color-red-800: #c62828;
-  --color-red-900: #b71c1c;
+  --color-scale-green-0: #aff5b4;
+  --color-scale-green-1: #7ee787;
+  --color-scale-green-2: #56d364;
+  --color-scale-green-3: #3fb950;
+  --color-scale-green-4: #2ea043;
+  --color-scale-green-5: #238636;
+  --color-scale-green-6: #196c2e;
+  --color-scale-green-7: #0f5323;
+  --color-scale-green-8: #033a16;
+  --color-scale-green-9: #04260f;
 
-  --color-pink-50: #fce4ec;
-  --color-pink-100: #f8bbd0;
-  --color-pink-200: #f48fb1;
-  --color-pink-300: #f06292;
-  --color-pink-400: #ec407a;
-  --color-pink-500: #e91e63;
-  --color-pink-600: #d81b60;
-  --color-pink-700: #c2185b;
-  --color-pink-800: #ad1457;
-  --color-pink-900: #880e4f;
+  --color-scale-yellow-0: #f8e3a1;
+  --color-scale-yellow-1: #f2cc60;
+  --color-scale-yellow-2: #e3b341;
+  --color-scale-yellow-3: #d29922;
+  --color-scale-yellow-4: #bb8009;
+  --color-scale-yellow-5: #9e6a03;
+  --color-scale-yellow-6: #845306;
+  --color-scale-yellow-7: #693e00;
+  --color-scale-yellow-8: #4b2900;
+  --color-scale-yellow-9: #341a00;
 
-  --color-purple-50: #f3e5f5;
-  --color-purple-100: #e1bee7;
-  --color-purple-200: #ce93d8;
-  --color-purple-300: #ba68c8;
-  --color-purple-400: #ab47bc;
-  --color-purple-500: #9c27b0;
-  --color-purple-600: #8e24aa;
-  --color-purple-700: #7b1fa2;
-  --color-purple-800: #6a1b9a;
-  --color-purple-900: #4a148c;
+  --color-scale-orange-0: #ffdfb6;
+  --color-scale-orange-1: #ffc680;
+  --color-scale-orange-2: #ffa657;
+  --color-scale-orange-3: #f0883e;
+  --color-scale-orange-4: #db6d28;
+  --color-scale-orange-5: #bd561d;
+  --color-scale-orange-6: #9b4215;
+  --color-scale-orange-7: #762d0a;
+  --color-scale-orange-8: #5a1e02;
+  --color-scale-orange-9: #3d1300;
 
-  --color-deeppurple-50: #ede7f6;
-  --color-deeppurple-100: #d1c4e9;
-  --color-deeppurple-200: #b39ddb;
-  --color-deeppurple-300: #9575cd;
-  --color-deeppurple-400: #7e57c2;
-  --color-deeppurple-500: #673ab7;
-  --color-deeppurple-600: #5e35b1;
-  --color-deeppurple-700: #512da8;
-  --color-deeppurple-800: #4527a0;
-  --color-deeppurple-900: #311b92;
-  
-  --color-indigo-50: #e8eaf6;
-  --color-indigo-100: #c5cae9;
-  --color-indigo-200: #9fa8da;
-  --color-indigo-300: #7986cb;
-  --color-indigo-400: #5c6bc0;
-  --color-indigo-500: #3f51b5;
-  --color-indigo-600: #3949ab;
-  --color-indigo-700: #303f9f;
-  --color-indigo-800: #283593;
-  --color-indigo-900: #1a237e;
-  
-  --color-blue-50: #e3f2fd;
-  --color-blue-100: #bbdefb;
-  --color-blue-200: #90caf9;
-  --color-blue-300: #64b5f6;
-  --color-blue-400: #42a5f5;
-  --color-blue-500: #2196f3;
-  --color-blue-600: #1e88e5;
-  --color-blue-700: #1976d2;
-  --color-blue-800: #1565c0;
-  --color-blue-900: #0d47a1;
-  
-  --color-lightblue-500: #03a9f4;
-  --color-lightblue-50: #e1f5fe;
-  --color-lightblue-100: #b3e5fc;
-  --color-lightblue-200: #81d4fa;
-  --color-lightblue-300: #4fc3f7;
-  --color-lightblue-400: #29b6f6;
-  --color-lightblue-500: #03a9f4;
-  --color-lightblue-600: #039be5;
-  --color-lightblue-700: #0288d1;
-  --color-lightblue-800: #0277bd;
-  --color-lightblue-900: #01579b;
-  
-  --color-cyan-50: #e0f7fa;
-  --color-cyan-100: #b2ebf2;
-  --color-cyan-200: #80deea;
-  --color-cyan-300: #4dd0e1;
-  --color-cyan-400: #26c6da;
-  --color-cyan-500: #00bcd4;
-  --color-cyan-600: #00acc1;
-  --color-cyan-700: #0097a7;
-  --color-cyan-800: #00838f;
-  --color-cyan-900: #006064;
-  
-  --color-cyan-50: #e0f2f1;
-  --color-cyan-100: #b2dfdb;
-  --color-cyan-200: #80cbc4;
-  --color-cyan-300: #4db6ac;
-  --color-cyan-400: #26a69a;
-  --color-cyan-500: #009688;
-  --color-cyan-600: #00897b;
-  --color-cyan-700: #00796b;
-  --color-cyan-800: #00695c;
-  --color-cyan-900: #004d40;
-  
-  --color-green-50: #e8f5e9;
-  --color-green-100: #c8e6c9;
-  --color-green-200: #a5d6a7;
-  --color-green-300: #81c784;
-  --color-green-400: #66bb6a;
-  --color-green-500: #4caf50;
-  --color-green-600: #43a047;
-  --color-green-700: #388e3c;
-  --color-green-800: #2e7d32;
-  --color-green-900: #1b5e20;
-  
-  --color-lightgreen-50: #f1f8e9;
-  --color-lightgreen-100: #dcedc8;
-  --color-lightgreen-200: #c5e1a5;
-  --color-lightgreen-300: #aed581;
-  --color-lightgreen-400: #9ccc65;
-  --color-lightgreen-500: #8bc34a;
-  --color-lightgreen-600: #7cb342;
-  --color-lightgreen-700: #689f38;
-  --color-lightgreen-800: #558b2f;
-  --color-lightgreen-900: #33691e;
-  
-  --color-lime-50: #f9fbe7;
-  --color-lime-100: #f0f4c3;
-  --color-lime-200: #e6ee9c;
-  --color-lime-300: #dce775;
-  --color-lime-400: #d4e157;
-  --color-lime-500: #cddc39;
-  --color-lime-600: #c0ca33;
-  --color-lime-700: #afb42b;
-  --color-lime-800: #9e9d24;
-  --color-lime-900: #827717;
-  
-  --color-yellow-50: #fffde7;
-  --color-yellow-100: #fff9c4;
-  --color-yellow-200: #fff59d;
-  --color-yellow-300: #fff176;
-  --color-yellow-400: #ffee58;
-  --color-yellow-500: #ffeb3b;
-  --color-yellow-600: #fdd835;
-  --color-yellow-700: #fbc02d;
-  --color-yellow-800: #f9a825;
-  --color-yellow-900: #f57f17;
-  
-  --color-amber-50: #fff8e1;
-  --color-amber-100: #ffecb3;
-  --color-amber-200: #ffe082;
-  --color-amber-300: #ffd54f;
-  --color-amber-400: #ffca28;
-  --color-amber-500: #ffc107;
-  --color-amber-600: #ffb300;
-  --color-amber-700: #ffa000;
-  --color-amber-800: #ff8f00;
-  --color-amber-900: #ff6f00;
-  
-  --color-orange-50: #fff3e0;
-  --color-orange-100: #ffe0b2;
-  --color-orange-200: #ffcc80;
-  --color-orange-300: #ffb74d;
-  --color-orange-400: #ffa726;
-  --color-orange-500: #ff9800;
-  --color-orange-600: #fb8c00;
-  --color-orange-700: #f57c00;
-  --color-orange-800: #ef6c00;
-  --color-orange-900: #e65100;
-  
-  --color-deeporange-50: #fbe9e7;
-  --color-deeporange-100: #ffccbc;
-  --color-deeporange-200: #ffab91;
-  --color-deeporange-300: #ff8a65;
-  --color-deeporange-400: #ff7043;
-  --color-deeporange-500: #ff5722;
-  --color-deeporange-600: #f4511e;
-  --color-deeporange-700: #e64a19;
-  --color-deeporange-800: #d84315;
-  --color-deeporange-900: #bf360c;
-  
-  --color-brown-50: #efebe9;
-  --color-brown-100: #d7ccc8;
-  --color-brown-200: #bcaaa4;
-  --color-brown-300: #a1887f;
-  --color-brown-400: #8d6e63;
-  --color-brown-500: #795548;
-  --color-brown-600: #6d4c41;
-  --color-brown-700: #5d4037;
-  --color-brown-800: #4e342e;
-  --color-brown-900: #3e2723;
-  
-  --color-grey-50: #fafafa;
-  --color-grey-100: #f5f5f5;
-  --color-grey-200: #eeeeee;
-  --color-grey-300: #e0e0e0;
-  --color-grey-400: #bdbdbd;
-  --color-grey-500: #9e9e9e;
-  --color-grey-600: #757575;
-  --color-grey-700: #616161;
-  --color-grey-800: #424242;
-  --color-grey-900: #212121;  
+  --color-scale-red-0: #ffdcd7;
+  --color-scale-red-1: #ffc1ba;
+  --color-scale-red-2: #ffa198;
+  --color-scale-red-3: #ff7b72;
+  --color-scale-red-4: #f85149;
+  --color-scale-red-5: #da3633;
+  --color-scale-red-6: #b62324;
+  --color-scale-red-7: #8e1519;
+  --color-scale-red-8: #67060c;
+  --color-scale-red-9: #490202;
 
-  --color-app-bg: #26323880;
-  --color-sidebar-bg: #37474faa;
+  --color-scale-purple-0: #eddeff;
+  --color-scale-purple-1: #e2c5ff;
+  --color-scale-purple-2: #d2a8ff;
+  --color-scale-purple-3: #bc8cff;
+  --color-scale-purple-4: #a371f7;
+  --color-scale-purple-5: #8957e5;
+  --color-scale-purple-6: #6e40c9;
+  --color-scale-purple-7: #553098;
+  --color-scale-purple-8: #3c1e70;
+  --color-scale-purple-9: #271052;
 
-  --color-text: #fff;
-  --color-text-muted: var(--color-bluegrey-100);
-  --color-text-label: var(--color-bluegrey-300);
+  --color-scale-pink-0: #ffdaec;
+  --color-scale-pink-1: #ffbedd;
+  --color-scale-pink-2: #ff9bce;
+  --color-scale-pink-3: #f778ba;
+  --color-scale-pink-4: #db61a2;
+  --color-scale-pink-5: #bf4b8a;
+  --color-scale-pink-6: #9e3670;
+  --color-scale-pink-7: #7d2457;
+  --color-scale-pink-8: #5e103e;
+  --color-scale-pink-9: #42062a;
 
-  --color-btn-bg: var(--color-bluegrey-700);
-  --color-btn-border: var(--color-bluegrey-800);
-  --color-btn-bg-hover: var(--color-bluegrey-600);
-  --color-btn-bg-active: var(--color-bluegrey-600);
+  --color-scale-coral-0: #ffddd2;
+  --color-scale-coral-1: #ffc2b2;
+  --color-scale-coral-2: #ffa28b;
+  --color-scale-coral-3: #f78166;
+  --color-scale-coral-4: #ea6045;
+  --color-scale-coral-5: #cf462d;
+  --color-scale-coral-6: #ac3220;
+  --color-scale-coral-7: #872012;
+  --color-scale-coral-8: #640d04;
+  --color-scale-coral-9: #460701;
 
-  --color-btn2-bg: var(--color-bluegrey-800);
-  --color-btn2-border: var(--color-bluegrey-900);
-  --color-btn2-bg-hover: var(--color-bluegrey-700);
+  --color-scale-black: #010409;
+  --color-scale-white: #ffffff;
 
-  --color-modal-bg: var(--color-bluegrey-800);
-  --color-modal-border: var(--color-bluegrey-900);
+  --color-scale-gray-0: #f0f6fc;
+  --color-scale-gray-1: #c9d1d9;
+  --color-scale-gray-2: #b1bac4;
+  --color-scale-gray-3: #8b949e;
+  --color-scale-gray-4: #6e7681;
+  --color-scale-gray-5: #484f58;
+  --color-scale-gray-6: #30363d;
+  --color-scale-gray-7: #21262d;
+  --color-scale-gray-8: #161b22;
+  --color-scale-gray-9: #0d1117;
 
-  --color-overlay-bg: #263238aa;
+  --color-app-bg: #0d111780;
+  --color-sidebar-bg: #21262daa;
+  --color-overlay-bg: #0d1117aa;
+
+  --color-changes-bg: #21262daa;
+  --color-changes-list-bg: var(--color-scale-gray-7);
+  --color-changes-border: #161b22aa;
+
+  --color-text: var(--color-scale-white);
+  --color-text-muted: var(--color-scale-gray-2);
+  --color-text-label: var(--color-scale-gray-4);
+
+  --color-btn-bg: var(--color-scale-gray-7);
+  --color-btn-border: var(--color-scale-gray-8);
+  --color-btn-bg-hover: var(--color-scale-gray-6);
+  --color-btn-bg-active: var(--color-scale-gray-6);
+
+  --color-btn2-bg: var(--color-scale-gray-6);
+  --color-btn2-border: var(--color-scale-gray-7);
+  --color-btn2-bg-hover: var(--color-scale-gray-5);
+
+  --color-modal-bg: var(--color-scale-gray-7);
+  --color-modal-border: var(--color-scale-gray-8);
 
   --sidebar-width: 20rem;
   --repo-button-height: 4rem;
-
-  --color-changes-bg: #37474faa;
-  --color-changes-list-bg: #37474f55;
-  --color-changes-border: #37474faa;
 }
