--- a/frontend/src/style/_main.scss
+++ b/frontend/src/style/_main.scss
@@ -33,6 +33,9 @@ table {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+}
+
+#container {
   display: flex;
   justify-content: center;
   align-items: middle;
@@ -41,14 +44,14 @@ table {
 #sidebar {
   width: var(--sidebar-width);
   overflow: visible;
-  height: 100%;
+  height: calc(100% - var(--title-bar-height));
   border-right: 1px solid var(--color-sidebar-border);
 }
 
 main {
   z-index: 1;
   width: calc(100% - var(--sidebar-width));
-  height: 100%;
+  height: calc(100% - var(--title-bar-height));
 }
 
 .overlay {
