--- a/frontend/src/style/_main.scss
+++ b/frontend/src/style/_main.scss
@@ -38,7 +38,8 @@ table {
 #container {
   display: flex;
   justify-content: center;
-  align-items: middle;
+  height: 100vh;
+  width: 100vw;
 }
 
 #sidebar {
