feat: scss branch colors

--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -101,24 +101,26 @@
   --color-scale-gray-8: #161b22;
   --color-scale-gray-9: #0d1117;
 
-  --color-branch-1-bg: #1a962488;
-  --color-branch-1-border: #1a9624;
-  --color-branch-2-bg: #23867988;
-  --color-branch-2-border: #238679;
-  --color-branch-3-bg: #1f6feb88;
-  --color-branch-3-border: #1f6feb;
-  --color-branch-4-bg: #8957e588;
-  --color-branch-4-border: #8957e5;
-  --color-branch-5-bg: #bf4b8a88;
-  --color-branch-5-border: #bf4b8a;
-  --color-branch-6-bg: #da363388;
-  --color-branch-6-border: #da3633;
-  --color-branch-7-bg: #cf462d88;
-  --color-branch-7-border: #cf462d;
-  --color-branch-8-bg: #bd561d88;
-  --color-branch-8-border: #bd561d;
-  --color-branch-9-bg: #9e6a0388;
-  --color-branch-9-border: #9e6a03;
+  --color-branch-0-bg: #1a9624;
+  --color-branch-0-bg--translucent: #1a962488;
+  --color-branch-1-bg: #238679;
+  --color-branch-1-bg--translucent: #23867988;
+  --color-branch-2-bg: #1f6feb;
+  --color-branch-2-bg--translucent: #1f6feb88;
+  --color-branch-3-bg: #8957e5;
+  --color-branch-3-bg--translucent: #8957e588;
+  --color-branch-4-bg: #bf4b8a;
+  --color-branch-4-bg--translucent: #bf4b8a88;
+  --color-branch-5-bg: #da3633;
+  --color-branch-5-bg--translucent: #da363388;
+  --color-branch-6-bg: #cf462d;
+  --color-branch-6-bg--translucent: #cf462d88;
+  --color-branch-7-bg: #bd561d;
+  --color-branch-7-bg--translucent: #bd561d88;
+  --color-branch-8-bg: #9e6a03;
+  --color-branch-8-bg--translucent: #9e6a0388;
+  --color-branch-9-bg: #9e8703;
+  --color-branch-9-bg--translucent: #9e870388;
 
   --color-app-bg--windows: #0d1117cc;
   --color-app-bg--darwin: #0d111766;
