--- a/frontend/src/style/_tree.scss
+++ b/frontend/src/style/_tree.scss
@@ -1,37 +1,36 @@
+$num-colors: 9;
+
+#tree {
+  .b {
+    stroke: red;
+  }
+
+  @for $c from 0 through $num-colors - 1 {
+    .b-#{$c} {
+      stroke: var(--color-branch-#{$c}-bg);
+    }
+  }
+
+  .v {
+    fill: red;
+  }
+
+  @for $c from 0 through $num-colors - 1 {
+    .v-#{$c} {
+      fill: var(--color-branch-#{$c}-bg);
+    }
+  }
+}
+
 .commit__label {
-  .c-1 & {
-    border-color: var(--color-branch-1-border) !important;
-    background-color: var(--color-branch-1-bg) !important;
-
-    &::after {
-      background-color: var(--color-branch-1-bg) !important;
-    }
-  }
-
-  .c-2 & {
-    border-color: var(--color-branch-2-border) !important;
-    background-color: var(--color-branch-2-bg) !important;
-
-    &::after {
-      background-color: var(--color-branch-2-bg) !important;
-    }
-  }
-
-  .c-3 & {
-    border-color: var(--color-branch-3-border) !important;
-    background-color: var(--color-branch-3-bg) !important;
-
-    &::after {
-      background-color: var(--color-branch-3-bg) !important;
-    }
-  }
-
-  .c-4 & {
-    border-color: var(--color-branch-4-border) !important;
-    background-color: var(--color-branch-4-bg) !important;
-
-    &::after {
-      background-color: var(--color-branch-4-bg) !important;
+  @for $c from 0 through $num-colors - 1 {
+    .c-#{$c} & {
+      border-color: var(--color-branch-#{$c}-bg) !important;
+      background-color: var(--color-branch-#{$c}-bg--translucent) !important;
+  
+      &::after {
+        background-color: var(--color-branch-#{$c}-bg--translucent) !important;
+      }
     }
   }
 }
