--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -101,6 +101,8 @@
   --color-scale-gray-8: #161b22;
   --color-scale-gray-9: #0d1117;
 
+  --color-branch-u-bg: #484f58;
+  --color-branch-u-bg--translucent: #484f5888;
   --color-branch-0-bg: #1a9624;
   --color-branch-0-bg--translucent: #1a962488;
   --color-branch-1-bg: #238679;
