feat: stashes, adj colors

--- a/frontend/src/style/_main.scss
+++ b/frontend/src/style/_main.scss
@@ -86,6 +86,6 @@ main {
 }
 
 ::selection {
-  color: var(--color-scale-gray-9);
-  background-color: var(--color-scale-gray-1);
+  color: var(--color-scale-a-9-100);
+  background-color: var(--color-scale-a-1-100);
 }
