--- a/frontend/src/style/_modal.scss
+++ b/frontend/src/style/_modal.scss
@@ -1,7 +1,7 @@
 .modal {
-  --color-btn-bg: var(--color-scale-gray-6);
-  --color-btn-border: var(--color-scale-gray-7);
-  --color-btn-bg-hover: var(--color-scale-gray-5);
+  --color-btn-bg: var(--color-scale-a-6-100);
+  --color-btn-border: var(--color-scale-a-7-100);
+  --color-btn-bg-hover: var(--color-scale-a-5-100);
 
   display: none;
   z-index: 50;
