--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -1,159 +1,224 @@
+$color-scale: (
+  b: (
+    0: #cae8ff,
+    1: #a5d6ff,
+    2: #79c0ff,
+    3: #58a6ff,
+    4: #388bfd,
+    5: #1f6feb,
+    6: #1158c7,
+    7: #0d419d,
+    8: #0c2d6b,
+    9: #051d4d,
+  ),
+  t: (
+    0: #adf0f5,
+    1: #7ddfe8,
+    2: #54c5d4,
+    3: #40aaba,
+    4: #2e8a9e,
+    5: #237286,
+    6: #19576b,
+    7: #0f3e52,
+    8: #03273a,
+    9: #041a25,
+  ),
+  g: (
+    0: #adf5b2,
+    1: #7ee787,
+    2: #56d364,
+    3: #3fb950,
+    4: #2ea043,
+    5: #238636,
+    6: #196c2e,
+    7: #0f5323,
+    8: #033a16,
+    9: #04260f,
+  ),
+  l: (
+    0: #e4f5ad,
+    1: #cde77e,
+    2: #afd355,
+    3: #95ba40,
+    4: #779e2e,
+    5: #618623,
+    6: #496b19,
+    7: #33520f,
+    8: #273a03,
+    9: #152504,
+  ),
+  y: (
+    0: #f8e3a0,
+    1: #f2cc60,
+    2: #e3b341,
+    3: #d29922,
+    4: #bb8009,
+    5: #9e6a03,
+    6: #845306,
+    7: #693e00,
+    8: #4b2900,
+    9: #341a00,
+  ),
+  o: (
+    0: #ffdfb6,
+    1: #ffc680,
+    2: #ffa657,
+    3: #f0883e,
+    4: #db6d28,
+    5: #bd561d,
+    6: #9b4215,
+    7: #762d0a,
+    8: #5a1e02,
+    9: #3d1300,
+  ),
+  o2: (
+    0: #ffddd2,
+    1: #ffc2b2,
+    2: #ffa28b,
+    3: #f78166,
+    4: #ea6045,
+    5: #cf462d,
+    6: #ac3220,
+    7: #872012,
+    8: #640d04,
+    9: #460701,
+  ),
+  r: (
+    0: #ffdcd7,
+    1: #ffc1ba,
+    2: #ffa198,
+    3: #ff7b72,
+    4: #f85149,
+    5: #da3633,
+    6: #b62324,
+    7: #8e1519,
+    8: #67060c,
+    9: #490202,
+  ),
+  n: (
+    0: #ffdaec,
+    1: #ffbedd,
+    2: #ff9bce,
+    3: #f778ba,
+    4: #db61a2,
+    5: #bf4b8a,
+    6: #9e3670,
+    7: #7d2457,
+    8: #5e103e,
+    9: #42062a,
+  ),
+  p: (
+    0: #eddeff,
+    1: #e2c5ff,
+    2: #d2a8ff,
+    3: #bc8cff,
+    4: #a371f7,
+    5: #8957e5,
+    6: #6e40c9,
+    7: #553098,
+    8: #3c1e70,
+    9: #271052,
+  ),
+  a: (
+    0: #f0f6fc,
+    1: #c9d1d9,
+    2: #b1bac4,
+    3: #8b949e,
+    4: #6e7681,
+    5: #484f58,
+    6: #30363d,
+    7: #21262d,
+    8: #161b22,
+    9: #0d1117,
+  ),
+);
+
+$transparency: (
+  25: 40,
+  50: 80,
+  75: bf,
+  100: ff,
+);
+
+$color-scale-black: #010409;
+$color-scale-white: #ffffff;
+
 :root {
-  --color-scale-blue-0: #cae8ff;
-  --color-scale-blue-1: #a5d6ff;
-  --color-scale-blue-2: #79c0ff;
-  --color-scale-blue-3: #58a6ff;
-  --color-scale-blue-4: #388bfd;
-  --color-scale-blue-5: #1f6feb;
-  --color-scale-blue-6: #1158c7;
-  --color-scale-blue-7: #0d419d;
-  --color-scale-blue-8: #0c2d6b;
-  --color-scale-blue-9: #051d4d;
+  @each $color, $scale in $color-scale {
+    @each $n, $v in $scale {
+      @each $t, $o in $transparency {
+        --color-scale-#{$color}-#{$n}-#{$t}: #{$v}#{$o};
+      }
+    }
+  }
 
-  --color-scale-green-0: #aff5b4;
-  --color-scale-green-1: #7ee787;
-  --color-scale-green-2: #56d364;
-  --color-scale-green-3: #3fb950;
-  --color-scale-green-4: #2ea043;
-  --color-scale-green-5: #238636;
-  --color-scale-green-6: #196c2e;
-  --color-scale-green-7: #0f5323;
-  --color-scale-green-8: #033a16;
-  --color-scale-green-9: #04260f;
+  --color-scale-black: #{$color-scale-black};
+  --color-scale-white: #{$color-scale-white};
 
-  --color-scale-yellow-0: #f8e3a1;
-  --color-scale-yellow-1: #f2cc60;
-  --color-scale-yellow-2: #e3b341;
-  --color-scale-yellow-3: #d29922;
-  --color-scale-yellow-4: #bb8009;
-  --color-scale-yellow-5: #9e6a03;
-  --color-scale-yellow-6: #845306;
-  --color-scale-yellow-7: #693e00;
-  --color-scale-yellow-8: #4b2900;
-  --color-scale-yellow-9: #341a00;
-
-  --color-scale-orange-0: #ffdfb6;
-  --color-scale-orange-1: #ffc680;
-  --color-scale-orange-2: #ffa657;
-  --color-scale-orange-3: #f0883e;
-  --color-scale-orange-4: #db6d28;
-  --color-scale-orange-5: #bd561d;
-  --color-scale-orange-6: #9b4215;
-  --color-scale-orange-7: #762d0a;
-  --color-scale-orange-8: #5a1e02;
-  --color-scale-orange-9: #3d1300;
-
-  --color-scale-red-0: #ffdcd7;
-  --color-scale-red-1: #ffc1ba;
-  --color-scale-red-2: #ffa198;
-  --color-scale-red-3: #ff7b72;
-  --color-scale-red-4: #f85149;
-  --color-scale-red-5: #da3633;
-  --color-scale-red-6: #b62324;
-  --color-scale-red-7: #8e1519;
-  --color-scale-red-8: #67060c;
-  --color-scale-red-9: #490202;
-
-  --color-scale-purple-0: #eddeff;
-  --color-scale-purple-1: #e2c5ff;
-  --color-scale-purple-2: #d2a8ff;
-  --color-scale-purple-3: #bc8cff;
-  --color-scale-purple-4: #a371f7;
-  --color-scale-purple-5: #8957e5;
-  --color-scale-purple-6: #6e40c9;
-  --color-scale-purple-7: #553098;
-  --color-scale-purple-8: #3c1e70;
-  --color-scale-purple-9: #271052;
-
-  --color-scale-pink-0: #ffdaec;
-  --color-scale-pink-1: #ffbedd;
-  --color-scale-pink-2: #ff9bce;
-  --color-scale-pink-3: #f778ba;
-  --color-scale-pink-4: #db61a2;
-  --color-scale-pink-5: #bf4b8a;
-  --color-scale-pink-6: #9e3670;
-  --color-scale-pink-7: #7d2457;
-  --color-scale-pink-8: #5e103e;
-  --color-scale-pink-9: #42062a;
-
-  --color-scale-coral-0: #ffddd2;
-  --color-scale-coral-1: #ffc2b2;
-  --color-scale-coral-2: #ffa28b;
-  --color-scale-coral-3: #f78166;
-  --color-scale-coral-4: #ea6045;
-  --color-scale-coral-5: #cf462d;
-  --color-scale-coral-6: #ac3220;
-  --color-scale-coral-7: #872012;
-  --color-scale-coral-8: #640d04;
-  --color-scale-coral-9: #460701;
-
-  --color-scale-black: #010409;
-  --color-scale-white: #ffffff;
-
-  --color-scale-gray-0: #f0f6fc;
-  --color-scale-gray-1: #c9d1d9;
-  --color-scale-gray-2: #b1bac4;
-  --color-scale-gray-3: #8b949e;
-  --color-scale-gray-4: #6e7681;
-  --color-scale-gray-5: #484f58;
-  --color-scale-gray-6: #30363d;
-  --color-scale-gray-7: #21262d;
-  --color-scale-gray-8: #161b22;
-  --color-scale-gray-9: #0d1117;
-
-  --color-branch-u-bg: #484f58;
-  --color-branch-u-bg--translucent: #484f5888;
-  --color-branch-0-bg: #1a9624;
-  --color-branch-0-bg--translucent: #1a962488;
-  --color-branch-1-bg: #238679;
-  --color-branch-1-bg--translucent: #23867988;
-  --color-branch-2-bg: #1f6feb;
-  --color-branch-2-bg--translucent: #1f6feb88;
-  --color-branch-3-bg: #8957e5;
-  --color-branch-3-bg--translucent: #8957e588;
-  --color-branch-4-bg: #bf4b8a;
-  --color-branch-4-bg--translucent: #bf4b8a88;
-  --color-branch-5-bg: #da3633;
-  --color-branch-5-bg--translucent: #da363388;
-  --color-branch-6-bg: #cf462d;
-  --color-branch-6-bg--translucent: #cf462d88;
-  --color-branch-7-bg: #bd561d;
-  --color-branch-7-bg--translucent: #bd561d88;
-  --color-branch-8-bg: #9e6a03;
-  --color-branch-8-bg--translucent: #9e6a0388;
-  --color-branch-9-bg: #9e8703;
-  --color-branch-9-bg--translucent: #9e870388;
+  --color-branch-u-bg: var(--color-scale-a-5-100);
+  --color-branch-u-bg2: var(--color-scale-a-8-100);
+  --color-branch-u-bg--translucent: var(--color-scale-a-5-50);
+  --color-branch-0-bg: var(--color-scale-g-5-100);
+  --color-branch-0-bg2: var(--color-scale-g-8-100);
+  --color-branch-0-bg--translucent: var(--color-scale-g-5-50);
+  --color-branch-1-bg: var(--color-scale-t-5-100);
+  --color-branch-1-bg2: var(--color-scale-t-8-100);
+  --color-branch-1-bg--translucent: var(--color-scale-t-5-50);
+  --color-branch-2-bg: var(--color-scale-b-5-100);
+  --color-branch-2-bg2: var(--color-scale-b-8-100);
+  --color-branch-2-bg--translucent: var(--color-scale-b-5-50);
+  --color-branch-3-bg: var(--color-scale-p-5-100);
+  --color-branch-3-bg2: var(--color-scale-p-8-100);
+  --color-branch-3-bg--translucent: var(--color-scale-p-5-50);
+  --color-branch-4-bg: var(--color-scale-n-5-100);
+  --color-branch-4-bg2: var(--color-scale-n-8-100);
+  --color-branch-4-bg--translucent: var(--color-scale-n-5-50);
+  --color-branch-5-bg: var(--color-scale-r-5-100);
+  --color-branch-5-bg2: var(--color-scale-r-8-100);
+  --color-branch-5-bg--translucent: var(--color-scale-r-5-50);
+  --color-branch-6-bg: var(--color-scale-o2-5-100);
+  --color-branch-6-bg2: var(--color-scale-o2-8-100);
+  --color-branch-6-bg--translucent: var(--color-scale-o2-5-50);
+  --color-branch-7-bg: var(--color-scale-o-5-100);
+  --color-branch-7-bg2: var(--color-scale-o-8-100);
+  --color-branch-7-bg--translucent: var(--color-scale-o-5-50);
+  --color-branch-8-bg: var(--color-scale-y-5-100);
+  --color-branch-8-bg2: var(--color-scale-y-8-100);
+  --color-branch-8-bg--translucent: var(--color-scale-y-5-50);
+  --color-branch-9-bg: var(--color-scale-l-5-100);
+  --color-branch-9-bg2: var(--color-scale-l-8-100);
+  --color-branch-9-bg--translucent: var(--color-scale-l-5-50);
 
   --color-app-bg--windows: #0d1117cc;
   --color-app-bg--darwin: #0d111766;
   --color-app-bg: var(--color-app-bg--windows);
 
-  --color-sidebar-bg: var(--color-scale-gray-8);
-  --color-sidebar-border: var(--color-scale-gray-9);
-  --color-overlay-bg: #0d1117aa;
+  --color-sidebar-bg: var(--color-scale-a-8-100);
+  --color-sidebar-border: var(--color-scale-a-9-100);
+  --color-overlay-bg: var(--color-scale-a-9-75);
 
-  --color-changes-bg: var(--color-scale-gray-8);
-  --color-changes-list-bg: var(--color-scale-gray-7);
-  --color-changes-border: #161b22aa;
+  --color-changes-bg: var(--color-scale-a-8-100);
+  --color-changes-list-bg: var(--color-scale-a-7-100);
+  --color-changes-border: var(--color-scale-a-8-75);
 
   --color-text: var(--color-scale-white);
-  --color-text-muted: var(--color-scale-gray-2);
-  --color-text-label: var(--color-scale-gray-4);
+  --color-text-muted: var(--color-scale-a-2);
+  --color-text-label: var(--color-scale-a-4);
 
-  --color-btn-bg: var(--color-scale-gray-7);
-  --color-btn-border: var(--color-scale-gray-8);
-  --color-btn-bg-hover: var(--color-scale-gray-6);
-  --color-btn-bg-active: var(--color-scale-gray-6);
+  --color-btn-bg: var(--color-scale-a-7-100);
+  --color-btn-border: var(--color-scale-a-8-100);
+  --color-btn-bg-hover: var(--color-scale-a-6-100);
+  --color-btn-bg-active: var(--color-scale-a-6-100);
 
-  --color-btn2-bg: var(--color-scale-gray-6);
-  --color-btn2-border: var(--color-scale-gray-7);
-  --color-btn2-bg-hover: var(--color-scale-gray-5);
+  --color-btn2-bg: var(--color-scale-a-6-100);
+  --color-btn2-border: var(--color-scale-a-7-100);
+  --color-btn2-bg-hover: var(--color-scale-a-5-100);
 
-  --color-modal-bg: var(--color-scale-gray-7);
-  --color-modal-border: var(--color-scale-gray-8);
+  --color-modal-bg: var(--color-scale-a-7-100);
+  --color-modal-border: var(--color-scale-a-8-100);
 
-  --color-scrollbar-bg: var(--color-scale-gray-8);
-  --color-scrollbar-fg: var(--color-scale-gray-6);
+  --color-scrollbar-bg: var(--color-scale-a-8-100);
+  --color-scrollbar-fg: var(--color-scale-a-6-100);
 
   --title-bar-height: 2.25rem;
   --sidebar-width: 20rem;
