--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -224,4 +224,6 @@ $color-scale-white: #ffffff;
   --sidebar-width: 20rem;
   --repo-button-height: 4rem;
   --tabs-height: 2.5rem;
+  // In Pixels!
+  --commit-details-height: 24px;
 }
