--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -210,6 +210,10 @@ $color-scale-white: #ffffff;
   --color-btn-bg-hover: var(--color-scale-a-6-100);
   --color-btn-bg-active: var(--color-scale-a-6-100);
 
+  --color-context-bg: var(--color-scale-a-8-100);
+  --color-context-bg-hover: var(--color-scale-a-6-100);
+  --color-context-border: var(--color-scale-a-6-100);
+
   --color-btn2-bg: var(--color-scale-a-6-100);
   --color-btn2-border: var(--color-scale-a-7-100);
   --color-btn2-bg-hover: var(--color-scale-a-5-100);
