--- a/frontend/src/style/_tree.scss
+++ b/frontend/src/style/_tree.scss
@@ -4,19 +4,18 @@ $num-colors: 10;
   padding: 0;
   min-width: 4rem;
   text-align: left;
-  z-index: 100;
-
-  &__text {
-    height: var(--commit-details-height);
-    box-sizing: border-box;
-    padding: 0.25rem 0.5rem;
-    white-space: nowrap;
-    background-color: var(--color-scale-a-7-100);
-    font-weight: bold;
-  }
+  position: relative;
+  pointer-events: none;
+  user-select: none;
 
   &__graph {
     overflow-x: hidden;
+    position: absolute;
+    z-index: 150;
+  }
+
+  circle {
+    pointer-events: all;
   }
 
   // Branches
