refactor: clean scss separate

--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -202,15 +202,15 @@ $color-scale-white: #ffffff;
   --color-changes-border: var(--color-scale-a-8-75);
 
   --color-text: var(--color-scale-white);
-  --color-text-muted: var(--color-scale-a-2);
-  --color-text-label: var(--color-scale-a-4);
+  --color-text-muted: var(--color-scale-a-2-100);
+  --color-text-label: var(--color-scale-a-4-100);
 
   --color-btn-bg: var(--color-scale-a-7-100);
   --color-btn-border: var(--color-scale-a-8-100);
   --color-btn-bg-hover: var(--color-scale-a-6-100);
   --color-btn-bg-active: var(--color-scale-a-6-100);
 
-  --color-context-bg: var(--color-scale-a-8-100);
+  --color-context-bg: var(--color-scale-a-7-100);
   --color-context-bg-hover: var(--color-scale-a-6-100);
   --color-context-border: var(--color-scale-a-6-100);
 
