--- a/frontend/src/style/style.scss
+++ b/frontend/src/style/style.scss
@@ -2,4 +2,10 @@
 @use "main";
 @use "modal";
 @use "buttons";
+@use "sidebar";
+@use "tabs";
+@use "changes";
+@use "commits";
+@use "commit";
+@use "commit-labels";
 @use "tree";
