--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -231,6 +231,7 @@ $color-scale-white: #ffffff;
   --sidebar-width: 20rem;
   --repo-button-height: 4rem;
   --tabs-height: 2.5rem;
+  --resize-bar-width: 0.33rem;
   // In Pixels!
   --commit-details-height: 24px;
 }
