--- a/frontend/src/style/_buttons.scss
+++ b/frontend/src/style/_buttons.scss
@@ -1,17 +1,27 @@
 .btn {
   border: none;
   color: var(--color-text);
+  fill: var(--color-text);
   background-color: var(--color-btn-bg);
   font-size: 1rem;
   padding: 0.5rem 1rem;
   margin: 0;
-  cursor: pointer;
+
+  &:not(:disabled) {
+    cursor: pointer;
+  }
+
+  &:disabled {
+    color: var(--color-text-muted);
+    fill: var(--color-text-muted);
+    background-color: var(--color-btn-bg-disabled);
+  }
 
   &.active {
     background-color: var(--color-btn-bg-active);
   }
 
-  &:hover {
+  &:hover:not(:disabled) {
     background-color: var(--color-btn-bg-hover);
   }
 }
