feat: collapse dirs in diff summary

--- a/frontend/src/style/_commit-details.scss
+++ b/frontend/src/style/_commit-details.scss
@@ -1,3 +1,5 @@
+@use "!mixins" as *;
+
 .commit-details {
   height: var(--commit-details-height);
   display: flex;
@@ -43,15 +45,51 @@
 }
 
 .filestatdir {
+  cursor: default;
+
   // The first dir is the root, skip styling that one.
   &__dir &__dir {
     margin-left: 1rem;
+    user-select: none;
+    -webkit-user-select: none;
+
     &-name {
       color: var(--color-text-muted);
+      cursor: pointer;
+      position: relative;
+
+      &::before {
+        content: '';
+        @include carat-down;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 50%;
+        position: absolute;
+        left: -1.5rem;
+        top: 0rem;
+        width: 0.67rem;
+        height: 0.67rem;
+        padding: 0.45rem;
+      }
+    }
+
+    &--closed {
+      > .filestatdir__dir-name::before {
+        transform: rotate(-90deg) translate(0.1rem, 0.05rem);
+      }
+
+      > .filestatdir__file {
+        display: none;
+      }
+
+      .filestatdir__dir {
+        display: none;
+      }
     }
   }
 
   &__file {
+    cursor: pointer;
     margin-top: 0.25rem;
     margin-bottom: 0.25rem;
     margin-left: 1rem;
