feat: highlight head in commits list

--- a/frontend/src/style/_commit.scss
+++ b/frontend/src/style/_commit.scss
@@ -46,6 +46,10 @@
         color: var(--color-scale-a-2-100);
         font-style: italic;
       }
+
+      .head & {
+        font-weight: bold;
+      }
     }
   }
 
