feat: message dialog store

--- a/frontend/src/style/_main.scss
+++ b/frontend/src/style/_main.scss
@@ -64,10 +64,10 @@ main {
 .overlay {
   z-index: 10;
   position: absolute;
-  top: 0;
+  top: var(--title-bar-height);
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh - var(--title-bar-height));
   background-color: var(--color-overlay-bg);
   display: flex;
   justify-content: center;
