--- a/frontend/src/style/_buttons.scss
+++ b/frontend/src/style/_buttons.scss
@@ -9,6 +9,11 @@
   padding: 0.5rem 1rem;
   margin: 0;
 
+  svg {
+    margin-left: 0.5rem;
+    vertical-align: middle;
+  }
+
   &:not(:disabled) {
     cursor: pointer;
   }
