--- a/frontend/src/style/_modal.scss
+++ b/frontend/src/style/_modal.scss
@@ -3,7 +3,7 @@
   --color-btn-border: var(--color-scale-a-7-100);
   --color-btn-bg-hover: var(--color-scale-a-5-100);
 
-  display: none;
+  display: block;
   z-index: 50;
 
   .overlay {
@@ -20,12 +20,39 @@
     white-space: pre-wrap;
   }
 
+  &__heading {
+    font-size: 1.25rem;
+    padding: 1rem;
+    border-bottom: 1px solid var(--color-modal-border);
+  }
+
   &__text {
     padding: 1rem;
   }
 
-  &__response {
+  &__options {
+    min-width: 55rem;
+    max-width: 80vw;
+    padding: 1rem;
+    display: flex;
+  }
+
+  &__option {
+    flex: 1;
+
+    &.btn {
+      margin: 1rem;
+      padding-bottom: 1rem;
+    }
+  }
+
+  &__option-icon {
+    margin: 0.25rem auto 1rem;
     text-align: center;
+  }
+
+  &__response {
+    text-align: right;
     border-top: 1px solid var(--color-modal-border);
     padding: 1rem;
   }
