--- a/frontend/src/style/_main.scss
+++ b/frontend/src/style/_main.scss
@@ -61,6 +61,17 @@ main {
   height: calc(100% - var(--title-bar-height));
 }
 
+hr {
+  border-top: 1px solid var(--color-scale-a-6-100);
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+}
+
+ul {
+  padding-left: 2em;
+}
+
 .overlay {
   z-index: 10;
   position: absolute;
