--- a/frontend/src/style/_main.scss
+++ b/frontend/src/style/_main.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "FiraCode";
+  font-style: normal;
+  src: local(""), url("../fonts/FiraCode-VF.woff2") format("woff2");
+}
 
 * {
   box-sizing: border-box;
@@ -70,6 +75,12 @@ hr {
 
 ul {
   padding-left: 2em;
+}
+
+code,
+pre {
+  font-family: FiraCode, monospace;
+  font-size: 0.9rem;
 }
 
 code {
