--- a/frontend/src/style/_commit-details.scss
+++ b/frontend/src/style/_commit-details.scss
@@ -62,6 +62,32 @@
     width: 1px;
     border-left: 1px solid var(--color-commitdetails-border);
   }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  p {
+    margin: 0.5rem 0;
+  }
+
+  h1 {
+    font-size: 1.4rem;
+  }
+
+  h2 {
+    font-size: 1.3rem;
+  }
+
+  h3 {
+    font-size: 1.2rem;
+  }
+
+  h5,
+  h4 {
+    font-size: 1.1rem;
+  }
 }
 
 .filestatdir {
