--- a/frontend/src/style/_commits.scss
+++ b/frontend/src/style/_commits.scss
@@ -20,6 +20,14 @@
   &__table {
     margin-bottom: 0.5rem;
     width: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto;
+
+    thead,
+    tbody,
+    tr {
+      display: contents;
+    }
 
     tr:first-child {
       td {
@@ -49,7 +57,6 @@
 
     &--subject {
       width: 100%;
-      max-width: 25vw;
     }
 
     &-inner {
@@ -117,4 +124,23 @@
 
 .load-more-commits {
   margin-bottom: 2.5rem;
+}
+
+.resize-handle {
+  display: block;
+  position: absolute;
+  cursor: col-resize;
+  width: 7px;
+  right: 0;
+  top: 0;
+  z-index: 1;
+  border-right: 2px solid transparent;
+}
+
+.resize-handle:hover {
+  border-color: #ccc;
+}
+
+.resize-handle.active {
+  border-color: #517ea5;
 }
