feat: commit signature in details

--- a/frontend/src/style/_commit-details.scss
+++ b/frontend/src/style/_commit-details.scss
@@ -53,6 +53,19 @@
     padding-left: 1.75rem;
   }
 
+  &__gpg {
+    font-size: 0.9rem;
+    color: var(--color-scale-a-2-100);
+
+    &-name {
+      display: inline-block;
+    }
+
+    &-desc {
+      display: inline-block;
+    }
+  }
+
   &::before {
     content: '';
     position: absolute;
@@ -172,5 +185,51 @@
     &-old {
       color: var(--color-text-muted);
     }
+  }
+}
+
+.gpg-status {
+  svg {
+    margin: -3px 0;
+  }
+
+  &--G {
+    // Good
+    fill: var(--color-scale-g-4-100);
+  }
+
+  &--B {
+    // Bad
+    fill: var(--color-scale-r-4-100);
+  }
+
+  &--U {
+    // Good signature, unknown validity
+    fill: var(--color-scale-l-4-100);
+  }
+
+  &--E {
+    // Missing key, unable to verify
+    fill: var(--color-scale-y-4-100);
+  }
+
+  &--X {
+    // Good signature, expired
+    fill: var(--color-scale-y-4-100);
+  }
+
+  &--Y {
+    // Good signature, expired key
+    fill: var(--color-scale-y-4-100);
+  }
+
+  &--R {
+    // Good signature, revoked key
+    fill: var(--color-scale-o-4-100);
+  }
+
+  &--N {
+    // No signature
+    fill: var(--color-scale-a-6-100);
   }
 }
