--- a/frontend/src/style/_forms.scss
+++ b/frontend/src/style/_forms.scss
@@ -7,7 +7,7 @@ input[type="text"] {
 .blank-field {
   span {
     display: block;
-    padding: 0 0 0.125rem 0.25rem;
+    padding: 0 0 0.25rem 0;
     color: var(--color-text-muted);
     font-size: 0.9rem;
   }
@@ -33,14 +33,13 @@ input[type="text"] {
       content: '';
       position: absolute;
       display: none;
-      left: 0.45rem;
-      top: 0.2rem;
+      left: 0.4rem;
+      top: 0.125rem;
       width: 0.25rem;
       height: 0.5rem;
-      border: solid white;
+      border: solid var(--color-text);
       border-width: 0 0.25rem 0.25rem 0;
       -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
       transform: rotate(45deg);
     }
   }
@@ -58,6 +57,65 @@ input[type="text"] {
 
     &:checked ~ span::after {
       display: block;
+    }
+  }
+}
+
+.radio {
+  margin-bottom: 0.5rem;
+
+  &__label {
+    display: block;
+    padding: 0 0.5rem 0.5rem 0;
+    color: var(--color-text-muted);
+    font-size: 0.9rem;
+  }
+
+  &__option {
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    -webkit-user-select: none;
+    user-select: none;
+    margin-right: 0.75rem;
+
+    span {
+      display: inline-block;
+      vertical-align: middle;
+      height: 1.25rem;
+      width: 1.25rem;
+      border-radius: 50%;
+      margin: 0 0.25rem 0.2rem 0;
+      background-color: var(--color-scale-a-5-75);
+      position: relative;
+
+      &::after {
+        content: '';
+        position: absolute;
+        display: none;
+        left: 0.35rem;
+        top: 0.4rem;
+        width: 0.5rem;
+        height: 0.5rem;
+        border-radius: 50%;
+        background-color: var(--color-text);
+      }
+    }
+
+    &:hover span {
+      background-color: var(--color-scale-a-4-75);
+    }
+
+    input[type="radio"] {
+      position: absolute;
+      opacity: 0;
+      cursor: pointer;
+      height: 0;
+      width: 0;
+
+      &:checked ~ span::after {
+        display: block;
+      }
     }
   }
 }
